# Generated by Django 5.0.3 on 2024-03-10 12:17

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Account',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('requested', models.DecimalField(blank=True, decimal_places=2, default=0, editable=False, max_digits=12)),
                ('granted', models.DecimalField(blank=True, decimal_places=2, default=0, editable=False, max_digits=12)),
                ('spent', models.DecimalField(blank=True, decimal_places=2, default=0, editable=False, max_digits=12)),
                ('left', models.DecimalField(blank=True, decimal_places=2, default=0, editable=False, max_digits=12)),
                ('name', models.CharField(unique=True)),
                ('total', models.DecimalField(decimal_places=2, default=0, max_digits=12)),
                ('active', models.BooleanField(default=False)),
                ('type', models.CharField(choices=[('statutory', 'STATUTORY'), ('additional', 'ADDITIONAL'), ('sponsorship', 'SPONSORSHIP'), ('other', 'OTHER'), ('grant', 'GRANT')])),
                ('unlimited', models.BooleanField(default=False)),
                ('amount_visible', models.BooleanField(default=True)),
            ],
            options={
                'db_table': 'accounts',
            },
        ),
    ]
