# Generated by Django 5.0.3 on 2024-03-10 12:17

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('accounts', '0001_initial'),
        ('societies', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Budget',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('requested', models.DecimalField(blank=True, decimal_places=2, default=0, editable=False, max_digits=12)),
                ('granted', models.DecimalField(blank=True, decimal_places=2, default=0, editable=False, max_digits=12)),
                ('spent', models.DecimalField(blank=True, decimal_places=2, default=0, editable=False, max_digits=12)),
                ('left', models.DecimalField(blank=True, decimal_places=2, default=0, editable=False, max_digits=12)),
                ('total', models.DecimalField(decimal_places=2, default=0, max_digits=12)),
                ('account', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='accounts.account')),
                ('society', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='societies.society')),
            ],
            options={
                'db_table': 'budgets',
            },
        ),
    ]
