# Generated by Django 5.0.3 on 2024-03-10 12:17

import common.validators
import django.db.models.deletion
import societies.enums
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('faculties', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Society',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('name', models.CharField(unique=True)),
                ('slug', models.SlugField(blank=True, editable=False)),
                ('abbreviation', models.CharField(blank=True, max_length=10, null=True)),
                ('email', models.CharField(blank=True, null=True, validators=[common.validators.PutDomainValidator()])),
                ('leader', models.CharField(blank=True, null=True)),
                ('supervisor', models.CharField(blank=True, null=True)),
                ('supervisor_email', models.CharField(blank=True, null=True, validators=[common.validators.PutDomainValidator()])),
                ('website', models.URLField(blank=True, null=True)),
                ('facebook', models.URLField(blank=True, null=True)),
                ('instagram', models.URLField(blank=True, null=True)),
                ('description', models.TextField(blank=True, null=True)),
                ('type', models.CharField(choices=[('undefined', 'UNDEFINED'), ('club', 'CLUB'), ('organization', 'ORGANIZATION')], default=societies.enums.SocietyTypes['UNDEFINED'])),
                ('visible', models.BooleanField(default=True)),
                ('active', models.BooleanField(default=True)),
                ('logo', models.ImageField(null=True, upload_to='')),
                ('faculty', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='faculties.faculty')),
            ],
            options={
                'verbose_name_plural': 'societies',
                'db_table': 'societies',
            },
        ),
    ]
